--- a/hello.ipynb
+++ b/hello.ipynb
@@ -62,7 +62,7 @@
     }
    ],
    "source": [
-    "pip install undetected-chromedriver"
+    "# pip install undetected-chromedriver"
    ]
   },
   {
